@@ -3,18 +3,19 @@ package pro.kensait.mockito.mocking;
 import static org.mockito.Mockito.*;
 import static pro.kensait.mockito.mocking.Util.*;
 
+import java.util.Arrays;
 import java.util.HashMap;
-import java.util.List;
 import java.util.Map;
 
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
+@DisplayName("副作用を抑止する挙動を確認するテストクラス")
 @SuppressWarnings("unchecked")
 public class DoNothingTest {
 
     @Test
-    @DisplayName("doNothing()：メソッドは呼び出したが、何も行なわれないこと（副作用なし）を検証する")
+    @DisplayName("メソッドは呼び出したが、何も行なわれないことを確認する")
     void test() {
         // HashMapクラスをスパイ化する
         Map<Integer, String> mapSpy = spy(HashMap.class);
@@ -28,8 +29,8 @@ public class DoNothingTest {
         // モック化されたMapのclear()メソッドを呼び出す
         mapSpy.clear();
 
-        // ユーティリティ（Mapからすべてのエントリを抽出しコンソールに表示）
-        extractEntry(mapSpy, List.of(0, 1, 2), "test");
+        // ユーティリティ呼び出し（Mapから指定されたキーを持つ値を取り出してコンソールに表示）
+        extractEntry(mapSpy, Arrays.asList(0, 1, 2), "test");
 
         // clear()メソッド呼び出しを検証する
         verify(mapSpy).clear();
