@@ -3,14 +3,14 @@ package pro.kensait.mockito.mocking;
 import static org.mockito.Mockito.*;
 import static pro.kensait.mockito.mocking.Util.*;
 
-import java.util.List;
+import java.util.Arrays;
 import java.util.Map;
 import java.util.NoSuchElementException;
 
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
-@DisplayName("when方式：例外を送出する振る舞いの挙動を確認する")
+@DisplayName("モックの例外を送出する振る舞いを確認するテストクラス")
 @SuppressWarnings("unchecked")
 public class ExceptionTest {
 
@@ -25,8 +25,8 @@ public class ExceptionTest {
         when(mapMock.get(1)).thenReturn("bar");
         when(mapMock.get(2)).thenThrow(new RuntimeException());
 
-        // ユーティリティ（Mapからすべてのエントリを抽出しコンソールに表示）
-        extractEntry(mapMock, List.of(0, 1, 2), "test_Case_1");
+        // ユーティリティ呼び出し（Mapから指定されたキーを持つ値を取り出してコンソールに表示）
+        extractEntry(mapMock, Arrays.asList(0, 1, 2), "test_Case_1");
     }
 
     @Test
@@ -41,8 +41,8 @@ public class ExceptionTest {
                 new IllegalArgumentException("2nd Exception"),
                 new NoSuchElementException("3rd Exception"));
 
-        // ユーティリティ（Mapからすべてのエントリを抽出しコンソールに表示）
-        extractEntry(mapMock, List.of(0, 0, 0), "test_Case_2");
+        // ユーティリティ呼び出し（Mapから指定されたキーを持つ値を取り出してコンソールに表示）
+        extractEntry(mapMock, Arrays.asList(0, 0, 0), "test_Case_2");
     }
 
     @Test
@@ -54,8 +54,8 @@ public class ExceptionTest {
         // 振る舞いを設定する（do方式）
         doThrow(RuntimeException.class).when(mapMock).get(0);
 
-        // ユーティリティ（Mapからすべてのエントリを抽出しコンソールに表示）
-        extractEntry(mapMock, List.of(0, 0, 0), "test_Case_3");
+        // ユーティリティ呼び出し（Mapから指定されたキーを持つ値を取り出してコンソールに表示）
+        extractEntry(mapMock, Arrays.asList(0, 0, 0), "test_Case_3");
     }
 
     @Test
@@ -70,7 +70,7 @@ public class ExceptionTest {
                 NoSuchElementException.class)
                 .when(mapMock).get(0);
 
-        // ユーティリティ（Mapからすべてのエントリを抽出しコンソールに表示）
-        extractEntry(mapMock, List.of(0, 0, 0), "test_Case_4");
+        // ユーティリティ呼び出し（Mapから指定されたキーを持つ値を取り出してコンソールに表示）
+        extractEntry(mapMock, Arrays.asList(0, 0, 0), "test_Case_4");
     }
 }
